@@ -1,3 +1,5 @@
+    ADDED: mouse selection modes are back! thanks to heiner for doing the work
+
 1.51
 ======================
     ADDED: Portuguese translation (thanks Bruno Queiros)
